[gd_scene load_steps=6 format=3 uid="uid://cj3qwyjxcjom"]

[ext_resource type="Script" uid="uid://bjepiwx77iyfv" path="res://weapon/bullet type/normal bullet/normal_bullet_type.gd" id="1_xtfx2"]
[ext_resource type="Texture2D" uid="uid://bnjm2tdy0sqx4" path="res://Art/weapon/bullet.png" id="2_3s5y0"]
[ext_resource type="Script" uid="uid://bv1oeapcr5rb1" path="res://Scripts/extendables/hurtbox.gd" id="3_m8ele"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ari5w"]
radius = 4.66667

[sub_resource type="CircleShape2D" id="CircleShape2D_6xmjb"]
radius = 4.33333

[node name="NormalBullet" type="CharacterBody2D"]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 0
collision_mask = 128
script = ExtResource("1_xtfx2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3s5y0")
region_enabled = true
region_rect = Rect2(3.15117, 291.252, 9.82767, 11.179)

[node name="Floor Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ari5w")

[node name="BulletHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
script = ExtResource("3_m8ele")
metadata/_custom_type_script = "uid://bv1oeapcr5rb1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHitbox"]
shape = SubResource("CircleShape2D_6xmjb")

[connection signal="hit_enemy" from="BulletHitbox" to="." method="on_enemy_hit"]
